# metaproject

./: README.md  pyproject.toml  requirements.txt
metaproject/: cli.py  config.py  template.py  test.py
