[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "metaproject"
version = "0.0.1"
description = "Scaffod projects from metaproject templates."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["click==8.1.3", "Jinja2==3.0.3", "dataclasses-json==0.5.7"]

[project.scripts]
metaproject = "metaproject.cli:cli"

[bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[bumpver.file_patterns]
"pyproject.toml" = [
  '^version = "{version}"$',
  '^current_version = "{version}"$',
]
